Fixed 1px gap in About grid by adding 'display: flex' & 'object-fit: cover' to image

--- a/src/Components/About/_about.scss
+++ b/src/Components/About/_about.scss
@@ -3,16 +3,15 @@
   background-color: $background-white;
   display: grid;
   justify-content: center; //Justify/center the grid in the middle of the page
-
-  // grid-auto-rows: minmax(min-content, max-content);
 }
+
+//Grid-template-area Items
 .item-a {
+  display: flex;
   grid-area: profilePic;
-  // justify-self: stretch; 
 }
 .item-b {
-  display: flex;
-  flex-direction: column;
+  background-color: rgb(255, 255, 255);
   grid-area: profileText;
 }
 .item-c {
@@ -35,9 +34,10 @@
   display: flex;
   justify-content: space-around;
 }
+//The grid
 .about-grid {
   display: grid;
-  height: auto;
+  height: calc(2/3 * 80vw);
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: 
@@ -47,75 +47,23 @@
   width: 80vw;
   z-index: $above-confetti-layer;
 }
+
+//Item specific styling
 .grid-pic {
-  height: auto;
+  // height: calc(1/3 * 80vw);
+  object-fit: cover;
   width: 100%;
 }
 .grid-text {
   @include fluid-type(font-size, $min-width, $max-width, 12px, 18px);
-  background-color: rgb(255, 255, 255);
-  color: $primary-blue-dark;
-  flex: 1;
-  padding: 15% 4% 0 4%;
+  color: $gap-blue;
+  // height: calc(1/3 * 80vw);
+  padding: 12% 8% 0 8%;
+  width: 100%;
 }
 .grid-logo {
-  height: auto;
   left: 20%;
   position: absolute;
   top: 40%;
   width: 60%;
 }
-// .grid-logo {
-//   height: 50%;
-//   width: 60%;
-// }
-
-
-// .about-wrapper {
-//   background-color: $background-white;
-//   display: grid;
-//   grid-auto-rows: minmax(min-content, max-content);
-// }
-// .about-content-block {
-//   // display: grid;
-//   padding: 0 6% 0 6%;
-//   z-index: $above-confetti-layer;
-// }
-// #profilePic {
-//   // border-radius: 50%;
-//   float: left;
-//   height: auto;
-//   margin-bottom: 5vh;
-//   margin-top: 4vh;
-//   // justify-self: end;
-//   width: 14%;
-//   // z-index: $above-confetti-layer;
-// }
-// .about-text {
-//   @include fluid-type(font-size, $min-width, $max-width, 12px, 18px);
-//   background-color: rgb(237, 237, 237);
-//   color: $gray-text;
-//   float: left;
-//   height: 150px;
-//   width: 60vw;
-//   padding: 2%;
-// }
-// // #aboutTextWrapper {
-// //   margin-bottom: 8vh;
-// //   z-index: $above-confetti-layer;
-// //   .about-text {
-// //     @include fluid-type(font-size, $min-width, $max-width, 12px, 24px);
-// //     color: $gray-text;
-// //     padding: 2%;
-// //   }
-// // }
-// #logosWrapper {
-//   display: flex;
-//   align-items: center;
-//   // flex-flow: row wrap;
-//   justify-content: space-around;
-//   z-index: $above-confetti-layer;
-//   .about-logo {
-//     width: 22%;
-//   }
-// }
